--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -94,19 +94,56 @@ components:
     bearerAuth:
       $ref: "./securitySchemes/bearerAuth.yaml#/bearerAuth"
 tags:
-  - name: Wallet Node
-    description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
-  - name: Wallet
-    description: Methods for shared wallet operations.
+  - name: Coloured Coin Wallet
+    description: Coloured coins, trades, and offers.
   - name: Key Management
     description: Methods for managing keys.
-  - name: Wallet Management
-    description: Methods for creating and managing wallets.
-  - name: Rate Limited Wallet
-    description: Rate limited wallet api.
   - name: Pool Wallet
     description: Pool wallet api.
+  - name: Rate Limited Wallet
+    description: Rate limited wallet api.
+  - name: Wallet
+    description: Methods for shared wallet operations.
+  - name: Wallet Management
+    description: Methods for creating and managing wallets.
+  - name: Wallet Node
+    description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
 paths:
+  /cat_set_name:
+    post:
+      tags:
+        - Coloured Coin Wallet
+      summary: Sets the name of the coloured coin wallet.
+      description: Sets the name of the coloured coin wallet.
+      operationId: cat_set_name
+      requestBody:
+        description: Request body with the Id of a wallet
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - wallet_id
+              properties:
+                wallet_id:
+                  type: integer
+                  format: uint32
+                name:
+                  type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  wallet_id:
+                    type: integer
+                    format: uint32
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
   /pw_join_pool:
     post:
       tags:
