--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -125,6 +125,7 @@ paths:
               type: object
               required:
                 - wallet_id
+                - name
               properties:
                 wallet_id:
                   type: integer
@@ -142,6 +143,30 @@ paths:
                   wallet_id:
                     type: integer
                     format: uint32
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
+  /cat_get_name:
+    post:
+      tags:
+        - Coloured Coin Wallet
+      summary: Gets the name of the coloured coin wallet.
+      description: Gets the name of the coloured coin wallet.
+      operationId: cat_get_name
+      requestBody:
+        $ref: "#/components/requestBodies/wallet_id"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  wallet_id:
+                    type: integer
+                    format: uint32
+                  name:
+                    type: string
                 allOf:
                   - $ref: "#/components/schemas/apiResponse"
   /pw_join_pool:
