create_offer_for_ids

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -76,6 +76,8 @@ components:
       $ref: "./schemas/private_key.yaml#/private_key"
     spend_bundle:
       $ref: "./schemas/spend_bundle.yaml#/spend_bundle"
+    trade_record:
+      $ref: "./schemas/trade_record.yaml#/trade_record"
     transaction_input:
       $ref: "./schemas/transaction_input.yaml#/transaction_input"
     transaction_record:
@@ -109,6 +111,47 @@ tags:
   - name: Wallet Node
     description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
 paths:
+  /create_offer_for_ids:
+    post:
+      tags:
+        - Coloured Coin Wallet
+      summary: Creates an offer.
+      description: Creates an offer.
+      operationId: create_offer_for_ids
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - offer
+              properties:
+                offer:
+                  type: object
+                  additionalProperties:
+                    type: integer
+                fee:
+                  type: integer
+                  format: uint64
+                  default: 0
+                validate_only:
+                  type: boolean
+                  default: false
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  offer:
+                    type: string
+                  trade_record:
+                    $ref: "#/components/schemas/trade_record"
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
   /cat_asset_id_to_name:
     post:
       tags:
