--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -142,6 +142,32 @@ paths:
                     $ref: "#/components/schemas/trade_record"
                 allOf:
                   - $ref: "#/components/schemas/apiResponse"
+  /get_offers_count:
+    post:
+      tags:
+        - Coloured Coin Wallet
+      summary: Retreives the number of offers.
+      description: Retreives the number of offers.
+      operationId: get_offers_count
+      requestBody:
+        $ref: "#/components/requestBodies/empty"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    type: object
+                    properties:
+                      my_offers_count:
+                        type: integer
+                      taken_offers_count:
+                        type: integer
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
   /get_offer:
     post:
       tags:
