--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -113,6 +113,32 @@ tags:
   - name: Wallet Node
     description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
 paths:
+  /did_get_did:
+    post:
+      tags:
+        - DID Wallet
+      summary: Retreives the distributed identity for a given wallet.
+      description: Retreives the distributed identity for a given wallet.
+      operationId: did_get_did
+      requestBody:
+        $ref: "#/components/requestBodies/wallet_id"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  wallet_id:
+                    type: integer
+                    format: uint32
+                  my_did:
+                    type: string
+                  coin_id:
+                    type: string
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
   /did_update_recovery_ids:
     post:
       tags:
