did_get_information_needed_for_recovery

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -113,6 +113,40 @@ tags:
   - name: Wallet Node
     description: The wallet RPC API is exposed, by default, on port 9256 and contains methods for managing wallet, trades, offers and transactions.
 paths:
+  /did_get_information_needed_for_recovery:
+    post:
+      tags:
+        - DID Wallet
+      summary: Retreives the information needed for the given DID wallet.
+      description: Retreives the information needed for the given DID wallet.
+      operationId: did_get_information_needed_for_recovery
+      requestBody:
+        $ref: "#/components/requestBodies/wallet_id"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  wallet_id:
+                    type: integer
+                    format: uint32
+                  my_did:
+                    type: string
+                  coin_name:
+                    type: string
+                  newpuzhash:
+                    type: string
+                  pubkey:
+                    type: string
+                  backup_dids:
+                    type: array
+                    items:
+                      type: string
+                allOf:
+                  - $ref: "#/components/schemas/apiResponse"
   /did_create_attest:
     post:
       tags:
